# internnexus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INGESTION_ENHANCEMENT.md  PIPELINE_IMPLEMENTATION_PLAN.md  RALPH_LOOP_FIX_PLAN.md  README.md  TECHNICAL_DEBT_PLAN.md  USAGE_EXAMPLES.md  backend-typing-modernization-plan.md  country.csv  debug_wizard.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  setup_enhanced_ingestion.sh  sonarreport.py  start-with-tunnel.sh  telemetry-id  vulnerabilities.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PIPELINE.md  alembic.ini  backfill_job_attributes.py  cleanup_locations.py  discover_companies.py  embed_jobs.py  generate_key.py  pipeline.yaml  pyproject.toml  run_ingestion.py  run_ingestion_simple.py  run_pipeline.py  telemetry-id  test.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_jobs_sync_indexes.py  0003_jobs_last_seen_sync_indexes.py  0004_pipeline_job_sightings.py  0005_search_vector_change_guard.py  0006_pg_stat_statements.py  0007_jobs_id_sync_contract.py  0273b3240827_add_fulltext_search.py  08fed4219e99_change_embedding_dimension_to_4096_for_.py  09732fefc9e6_add_user_profile_fields.py  118e70bf1e49_make_first_published_nullable.py  20260203_000001_create_jobs_table.py  20260203_000002_add_job_attributes.py  20260203_000003_add_city_state_country_columns.py  20260203_000004_fix_job_category_enum.py  20260203_000005_change_embedding_dimension.py  20260204_225527_add_user_authentication_tables.py  20260212_add_new_job_sources.py  20260212_password_invalidation.py  20260213_add_pipeline_runs.py  20260215_add_job_type_work_mode.py  20260216_performance_indexes.py  2c9d90bafa94_add_admin_job_clicks_tables_and_click_.py  2d97fe7477ec_fix_embedding_dimensions_to_1024.py  3f7c2a9d4b12_add_resume_embedding_persistence_fields.py  4fe9e032b963_add_password_history_table.py  54caf0054c9e_make_requisition_id_nullable.py  612dc9933fce_add_hashed_password_to_users.py  6a2b4c8d9e10_add_job_classification_retry_columns.py  7016200eb04f_change_embedding_dimensions_to_1024.py  8bc3f2c14a9e_add_saved_jobs_table.py  9d71b1e8a4c2_optimize_search_vector_trigger_for_pipeline_sync.py  a9470a9285c7_make_ashby_metadata_nullable.py  ad80df2d2115_drop_and_recreate_embedding_column_with_.py  ae3e98b7e08d_initial_schema_with_metadata_tables.py  b7f8c2d1e4a5_convert_job_category_to_varchar.py  c1d3e7f9a4b2_drop_saved_searches_table.py  c59f7c1eb6b3_make_ashby_updated_at_nullable.py  c8092e1b5cf6_merge_heads.py  c89466e23466_make_lever_metadata_nullable.py  (+7 more)
backend/app/: __main__.py  config.py  db.py  main.py  models.py  rate_limiter.py
backend/app/api/: admin.py  admin_schemas.py  auth.py  jobs.py  mappers.py  matching.py  schemas.py  users.py
backend/app/auth/: __init__.py  crypto.py  dependencies.py  jwt.py  oauth.py
backend/app/cache/: __init__.py  cache_service.py  redis_pool.py
backend/app/http_client/: __init__.py
backend/app/middleware/: logging.py  query_timing.py  security.py
backend/app/repositories/: __init__.py  (+4 more)
backend/ingestion/: __init__.py  cleanup.py  discovery.py  embeddings.py  enrichment.py  fetch.py  health.py  location_normalizer.py  pipeline.py  pipeline_config.py  pipeline_state.py  reclassify.py  schemas.py
backend/logs/: visa_classifications_20260210_103248.csv  visa_classifications_20260210_103248.jsonl
backend/prompts/: visa_classifier.txt
backend/tests/: __init__.py  conftest.py  test_auth_api.py  test_auth_dependencies.py  test_auth_integration.py  test_auth_jwt.py  test_config.py  test_import_chains.py  test_jobs_api.py  test_models.py
pipeline/: Dockerfile  Dockerfile.dev  __init__.py  backend_bridge.py  backfill_categories.py  category_mapping.py  classification.py  cleanup.py  cli_args.py  config.py  consolidate_categories.py  db.py  discovery.py  embedding.py  embeddings.py  enrichment.py  fetch.py  health.py  http_client.py  models.py  path_setup.py  pipeline.py  pipeline.yaml  pipeline_config.py  pipeline_state.py  pyproject.toml  run_pipeline.py  run_pipeline_services.py  schemas.py
pipeline/apis/: __init__.py  ashby_client.py  company_registry.py  discovered_companies.json  greenhouse_client.py  greenhouse_client.py.old  lever_client.py  lever_client.py.old  simplify_jobs_parser.py  utils.py  workday_client.py.old
pipeline/classification/: __init__.py  client.py  mapping.py  parser.py  prompts.py  rejections.py  service.py
pipeline/cleanup/: __init__.py  batch_processor.py  exporter.py  metadata.py  normalizer.py  parser.py
pipeline/cli/: __init__.py  args.py  consolidate_categories.py  run_pipeline.py
pipeline/data/: __init__.py  category_mapping.json  classification_rejections.jsonl  companies.json  constants.py  unmapped_categories.json
pipeline/discovery/: __init__.py  browser_config.py  browser_discovery.py  company_discovery.py  main.py  progress_tracker.py  run_discovery.py  user_agents.py
pipeline/domain/: __init__.py  schemas.py
pipeline/embeddings/: __init__.py  batch_processor.py  enrichment.py  pipeline.py  retry_handler.py
pipeline/ingest/: __init__.py  core.py  deduplication.py  fetch.py  identity.py  result.py  upsert.py
pipeline/location/: __init__.py  _patterns.py  cache.py  city_parser.py  constants.py  country_parser.py  normalize.py  regions.py  simple_parser.py  state_parser.py
pipeline/output/: location_parsing_test.csv  location_test_results.csv
pipeline/repositories/: __init__.py  job_text_sql.py  retry.py  sightings.py  sqlalchemy_repo.py  sync_ops.py
pipeline/runtime/: __init__.py  classify_step.py  commands.py  config.py  health.py  runner.py  services.py  state.py  steps.py  sync_lock.py
pipeline/scrapers/: __init__.py  indeed_scraper.py  linkedin_guest_scraper.py  stealth_browser.py
pipeline/sources/: __init__.py  ashby.py  greenhouse.py  lever.py  registry.py  simplify_jobs_parser.py  utils.py
pipeline/tests/: conftest.py  test_import_chains.py
pipeline/utils/: __init__.py  deduplication.py  lru.py
(+346 files in other folders)
