[project]
name = "internnexus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.5.2",
    "pgvector>=0.3.2",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "playwright>=1.46.0",
    "playwright-stealth>=1.0.6",
    "openai>=1.40.0",
    "anthropic>=0.34.2",
    "pypdf>=4.3.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "rich>=14.3.2",
    "psycopg2-binary>=2.9.11",
    "pycountry>=24.0.0",
    "redis>=7.1.1",
    "tenacity>=9.1.4",
    "hypothesis>=6.151.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",  # Module level import not at top - intentional for path setup
    "E501",  # Line too long - many URLs in code
    "F601",  # Repeated dict keys - intentional to override earlier values
]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

# Import chain test markers
markers = [
    "import_chain: tests that validate import structure",
    "circular_import: tests that detect circular dependencies",
    "entry_point: tests that validate entry points",
    "integration: integration tests requiring DB/external services",
    "e2e: end-to-end workflow tests",
]
