[project]
name = "internnexus-backend"
version = "0.1.0"
description = "InternNexus FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.5.2",
    "pgvector>=0.3.2",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "playwright>=1.46.0",
    "playwright-stealth>=1.0.6",
    "openai>=1.40.0",
    "anthropic>=0.34.2",
    "pypdf>=4.3.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
strict = true

[tool.setuptools]
packages = ["app"]
