[project]
name = "internnexus-backend"
version = "0.1.0"
description = "InternNexus FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.5.2",
    "pgvector>=0.3.2",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "pypdf>=4.3.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.1",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
strict = true

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
]
