[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internnexus-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "internnexus-core",
    "tenacity>=9.1.4",
    "sqlalchemy>=2.0.32",
    "pydantic-settings>=2.5.2",
    "pgvector>=0.3.2",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "pdfminer.six>=20231228",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.0.0",
    "pypdf>=4.3.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv.sources]
internnexus-core = { path = "../packages/internnexus-core" }

[project.scripts]
internnexus-backend = "app.__main__:main"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pyright>=1.1.400",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",
    "E501",
    "F601",
]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

markers = [
    "import_chain: tests that validate import structure",
    "circular_import: tests that detect circular dependencies",
    "entry_point: tests that validate entry points",
    "integration: integration tests requiring DB/external services",
    "e2e: end-to-end workflow tests",
]
