[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internnexus-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "internnexus-core",
    "tenacity>=9.1.4",
    "sqlalchemy>=2.0.32",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.0.0",
    "pgvector>=0.3.2",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
internnexus-core = { path = "../packages/internnexus-core" }

[project.optional-dependencies]
scrapers = []

[project.scripts]
internnexus-pipeline = "pipeline.cli.run_pipeline:main"
internnexus-consolidate-categories = "pipeline.cli.consolidate_categories:cli"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pyright>=1.1.400",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]


[tool.setuptools]
packages = [
    "pipeline",
    "pipeline.classification",
    "pipeline.cli",
    "pipeline.cleanup",
    "pipeline.domain",
    "pipeline.discovery",
    "pipeline.embeddings",
     "pipeline.ingest",
    "pipeline.location",
    "pipeline.repositories",
    "pipeline.runtime",
    "pipeline.sources",
]

[tool.setuptools.package-dir]
"pipeline" = "."

[tool.setuptools.package-data]
"pipeline" = [
    "pipeline.yaml",
    "data/*.json",
    "data/*/*.json",
    "location/data/*.json",
    "data/*.jsonl",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",
    "E501",
    "F601",
]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

markers = [
    "integration: integration tests requiring DB/external services",
]
